--- a/BLOG.html
+++ b/BLOG.html
@@ -4,6 +4,7 @@
     <!-- Encabezado de la página-->
     <meta charset="UTF-8" />
     <title>Blog - Salud Vital</title>
+    <link rel="icon" type="image/x-icon" href="img-home/logo.ico" />
     <style>
       body {
         background-image: url("Omelette.jpg");
