--- a/CONTACTO.html
+++ b/CONTACTO.html
@@ -3,7 +3,7 @@
   <head>
     <!-- Encabezado de la página-->
     <meta charset="UTF-8" />
-    <title>Contáctanos - Salud Vital</title>
+    <title>Contacto - Salud Vital</title>
     <link rel="icon" type="image/x-icon" href="img-home/logo.ico" />
   </head>
 
@@ -71,9 +71,7 @@
             <a href="REGISTRO.html" style="color: #000a05"><b>Registro</b></a>
           </li>
           <li style="display: inline; margin-right: 15px">
-            <a href="CONTACTO.html" style="color: #000a05"
-              ><b>Contáctanos</b></a
-            >
+            <a href="CONTACTO.html" style="color: #000a05"><b>Contacto</b></a>
           </li>
         </ul>
       </nav>
