--- a/REGISTRO.html
+++ b/REGISTRO.html
@@ -4,6 +4,7 @@
     <!-- Encabezado de la página-->
     <meta charset="UTF-8" />
     <title>Registro - Salud Vital</title>
+    <link rel="icon" type="image/x-icon" href="img-home/logo.ico" />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
